fixed vr button

--- a/projects/geography.html
+++ b/projects/geography.html
@@ -100,7 +100,7 @@
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a id="vr_link" href="./src/geography-application-VR-2.html" target="_blank" style="text-decoration: none;">
+                <a id="vr" href="./src/geography-application-VR-low.html" target="_blank" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
                          style="background: url('img/Geography/calcario.png') center;">
                         <div class="w3-padding" style="width:100%">
@@ -128,12 +128,12 @@
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a id="vr_link" href="./src/geography-application-VR.html" target="_blank" style="text-decoration: none;">
+                <a id="vr2" href="./src/geography-application-VR.html" target="_blank" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
                          style="background: url('img/Geography/calcario.png') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/vr-icon.png" alt="Augmented Reality" style="width: 64px;" />
-                            <br /><div id="vr">Virtual Reality - Standart Quality</div>
+                            <br /><div id="vr">Virtual Reality - High Quality</div>
                         </div>
                     </div>
                 </a>
