--- a/projects/geography.html
+++ b/projects/geography.html
@@ -25,15 +25,15 @@
 
         <div class="w3-container" id="about" style="text-align:justify;">
             <p id="p1">
-                As rochas fazem parte da litosfera, camada que compõe a superfície sólida da Terra. 
-                Elas são constituídas pela união de diferentes minerais, e são os diversos processos 
-                naturais do planeta os responsáveis pela formação dos mais variados tipos de rochas que são divididos em 3 grandes tipos:
+                Rocks are part of the lithosphere, the layer that makes up the Earth's solid surface.
+                They are constituted by the union of different minerals, and are the different processes
+                those responsible for the formation of the most varied types of rocks that are divided into 3 major types:
             </p>
 
             <p id="p2">
-                Magmáticas: formadas pela solidificação do magma e se dividem em 2 grupos de acordo com o local de sua solidificação. As intrusivas são as que se solidificaram dentro da crosta terrestre e as extrusivas são as que se solidificam fora da crosta. A principal diferença entre elas é que nas intrusivas os minerais se agrupam e formam cristais visíveis a olho nu, como na maioria dos granitos, enquanto nas extrusivas não é possível observar essa separação a olho nu, um exemplo é o basalto.
-                Metamórficas: também são formadas na crosta terrestre.  A pressão e a temperatura muito elevadas, os fortes atritos, ou a combinação química de dois ou mais minerais transformam a estrutura das rochas já formadas, como o mármore, a ardósia, o quartzo e o gnaisse.
-                Sedimentares: formadas fora da crosta terrestre pelo intemperismo sofrido pelas demais rochas. São exemplos o arenito e o calcário.
+                Magmatic: formed by the solidification of magma and divided into 2 groups according to the location of its solidification. Intrusives are those that solidify inside the earth's crust and extrusives are those that solidify outside the crust. The main difference between them is that in intrusive minerals group together and form crystals visible to the naked eye, as in most granites, while in extrusive ones it is not possible to observe this separation with the naked eye, an example is basalt.
+                Metamorphic: they are also formed in the earth's crust. Very high pressure and temperature, strong friction, or the chemical combination of two or more minerals transform the structure of rocks already formed, such as marble, slate, quartz and gneiss.
+                Sedimentary: formed outside the earth's crust by the weathering suffered by other rocks. Examples are sandstone and limestone.
 
             </p>
 
