changed filenames from 'geography' to 'rocks'

--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="javascript: TRANSLATION.redirect('projects/geography.html')">
+                <a href="javascript: TRANSLATION.redirect('projects/rocks.html')">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div id="rock" class="project-title w3-display-topleft w3-padding">Rock Types</div>
-                        <img src="img/projects-main-images/geography.png" alt="initial view of the application"
+                        <img src="img/projects-main-images/rocks.png" alt="initial view of the application"
                             style="width:100%;">
                     </div>
                 </a>
