--- a/projects/src/rocks-application.html
+++ b/projects/src/rocks-application.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="page-title">Vascular Diseases</title>
+    <title id="page-title">Rocks Types</title>
     <script src="../../js/translation.js"></script>
 
     <style>
@@ -210,7 +210,7 @@
     <script src="../libs/util/loadScreen/LoadScreenDraco.js"></script>
     <script src="../libs/loaders/GLTFLoader.js"></script>
     <script src="../libs/loaders/DRACOLoader.js"></script>
-    <script src="geography.js"></script>
+    <script src="rocks.js"></script>
     <script>
         TRANSLATION.add(
             '#page-title',
