--- a/projects/src/rocks-application.html
+++ b/projects/src/rocks-application.html
@@ -167,21 +167,19 @@
 
             <b id="source-title" class="content-title">Source</b>
             <p id="source" class="content">
-                <a href="https://www.nhlbi.nih.gov/health-topics/stroke" target="_blank"
-                    rel="noopener external">NHLBI</a><br />
-                <a href="https://www.stroke.org/en/about-stroke/stroke-risk-factors/stroke-risk-factors-you-can-control-treat-and-improve"
-                    target="_blank" rel="noopener external">Stroke.org</a><br />
-                <a href="https://www.mayoclinic.org/diseases-conditions/stroke/symptoms-causes/syc-20350113"
-                    target="_blank" rel="noopener external">Mayo Clinic</a>
+                <a href="https://www.infopedia.pt/$basalto#:~:text=O%20basalto%20%C3%A9%20uma%20rocha,rica%20em%20ferro%20e%20magn%C3%A9sio" target="_blank"
+                    rel="noopener external">Infopedia</a><br />
+                <a href="https://pt.wikipedia.org/wiki/Basalto"
+                    target="_blank" rel="noopener external">Wikipedia</a><br />
 
             </p>
 
             <b id="credits-title" class="content-title">3D Model Credits</b>
             <p id="credits" class="content">
-                <a href="https://3dprint.nih.gov/discover/3DPX-001564" target="_blank" rel="noopener external">
-                    3D Print
-                    for Health
+                <a href="https://sketchfab.com/3d-models/basalt-b6fa41f193c94eefa2661bdff7bd71e8" target="_blank" rel="noopener external">
+                    Edurock
                 </a>
+                
             </p> 
         </div>
     </div>
