--- a/projects/src/rocks-application.html
+++ b/projects/src/rocks-application.html
@@ -201,13 +201,13 @@
         }
     </script>
 
-    <script src="../libs/three/three.js"></script>
+    <script src="../libs/three/build/three.js"></script>
     <!-- <script src="../libs/three/controls/OrbitControls.js"></script> -->
-    <script src="../libs/three/controls/TrackballControls.js"></script>
+    <script src="../libs/three/build/js/controls/TrackballControls.js"></script>
     <script src="../libs/util/Stats.js"></script>
     <script src="../libs/util/loadScreen/LoadScreenDraco.js"></script>
-    <script src="../libs/loaders/GLTFLoader.js"></script>
-    <script src="../libs/loaders/DRACOLoader.js"></script>
+    <script src="../libs/three/build/js/loaders/GLTFLoader.js"></script>
+    <script src="../libs/three/build/js/loaders/DRACOLoader.js"></script>
     <script src="rocks.js"></script>
     <script>
         TRANSLATION.add(
