--- a/projects/src/rocks-application-AR-low.html
+++ b/projects/src/rocks-application-AR-low.html
@@ -35,10 +35,10 @@
     </style>
 
     <!-- Libraries of configuration -->
-    <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/OrbitControls.js"></script>
-    <script type="text/javascript" src="../libs/util/Stats.js"></script>
-    <script type="text/javascript" src="../libs/util/dat.gui.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/three/build/three.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/three/build/js/controls/OrbitControls.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/three/build/js/libs/stats.min.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/three/build/js/libs/dat.gui.min.js"></script>
 
     <!-- Library of Augmented Reality that uses Three.js -->
     <script type="text/javascript" charset="UTF-8" src="../libs/MarkerTracking--LocationBasedAR/THREE/ar.js"></script>
@@ -46,7 +46,7 @@
 
     <!-- Loading screen -->
     <script type="text/javascript" charset="UTF-8" src="../libs/util/loadScreen/LoadScreen.js"></script>
-    <script src="../libs/loaders/GLTFLoader.js"></script>
+    <script src="../libs/three/build/js/loaders/GLTFLoader.js"></script>
 
     <!-- There are many useful functionss -->
     <script type="text/javascript" src="../libs/util/util.js"></script>
