vr rocks project files path fixed

--- a/projects/src/rocks-application-VR.html
+++ b/projects/src/rocks-application-VR.html
@@ -17,11 +17,12 @@
   </head>
 
   <body>
-    <script src="../libs/three/three.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/three/build/three.js"></script>
     <!-- <script src="../libs/three/controls/OrbitControls.js"></script> -->
-    <script src="../libs/three/controls/TrackballControls.js"></script>
-    <script src="../libs/util/Stats.js"></script>
-    <script src="../libs/loaders/GLTFLoader.js"></script>
+    <script src="../libs/three/build/js/controls/TrackballControls.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/three/build/js/libs/stats.min.js"></script>
+    <script src="../libs/three/build/js/loaders/GLTFLoader.js"></script>
+
 
     <div id="webgl-output">
       <script type="module" src="rocks-VR.js"></script>
