--- a/projects/src/rocks-application-AR.html
+++ b/projects/src/rocks-application-AR.html
@@ -66,15 +66,15 @@
             language = language.substring(aux.length, language.length);
             switch (language) {
                 case "en-US":
-                    mainMediumQuality("en-US", "high");
+                    startApp("en-US", "high");
                     break;
                 case "pt-BR":
-                    mainMediumQuality("pt-BR", "high");
+                    startApp("pt-BR", "high");
                     break;
             }
         }
         else {
-            mainMediumQuality("en-US", "high");
+            startApp("en-US", "high");
         }
     </script>
     <script>
