--- a/projects/src/rocks-application-AR-low.html
+++ b/projects/src/rocks-application-AR-low.html
@@ -39,6 +39,7 @@
     <script type="text/javascript" charset="UTF-8" src="../libs/three/build/js/controls/OrbitControls.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/build/js/libs/stats.min.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/build/js/libs/dat.gui.min.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/util.js"></script>    
 
     <!-- Library of Augmented Reality that uses Three.js -->
     <script type="text/javascript" charset="UTF-8" src="../libs/MarkerTracking--LocationBasedAR/THREE/ar-modified.js"></script>
@@ -52,7 +53,7 @@
     <script type="text/javascript" src="../libs/util/util.js"></script>
 
     <!-- Library of example -->
-    <script type="text/javascript" src="./rocks-AR-low.js"></script>
+    <script type="text/javascript" src="./rocks-AR.js"></script>
 
 </head>
 
@@ -65,15 +66,15 @@
             language = language.substring(aux.length, language.length);
             switch (language) {
                 case "en-US":
-                    mainMediumQuality("en-US");
+                    startApp("en-US", "low");
                     break;
                 case "pt-BR":
-                    mainMediumQuality("pt-BR");
+                    startApp("pt-BR", "low");
                     break;
             }
         }
         else {
-            mainMediumQuality("en-US");
+            startApp("en-US", "low");
         }
     </script>
     <script>
