fixed rocks vr mode

--- a/projects/src/rocks-application-VR-low.html
+++ b/projects/src/rocks-application-VR-low.html
@@ -21,10 +21,12 @@
     <!-- <script src="../libs/three/controls/OrbitControls.js"></script> -->
     <script src="../libs/three/build/js/controls/TrackballControls.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/build/js/libs/stats.min.js"></script>
+    <script src="../libs/util/loadScreen/LoadScreenDraco.js"></script>
     <script src="../libs/three/build/js/loaders/GLTFLoader.js"></script>
+    <script src="../libs/three/build/js/loaders/DRACOLoader.js"></script>
 
     <div id="webgl-output">
-      <script type="module" src="rocks-VR-low.js"></script>
+      <script type="module" src="rocks-VR-low.js" defer></script>
     </div>
 
   </body>
