--- a/projects/src/rocks-application-VR.html
+++ b/projects/src/rocks-application-VR.html
@@ -21,11 +21,11 @@
     <!-- <script src="../libs/three/controls/OrbitControls.js"></script> -->
     <script src="../libs/three/build/js/controls/TrackballControls.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/build/js/libs/stats.min.js"></script>
+    <script src="../libs/util/loadScreen/LoadScreenDraco.js"></script>
     <script src="../libs/three/build/js/loaders/GLTFLoader.js"></script>
-
-
+    <script src="../libs/three/build/js/loaders/DRACOLoader.js"></script>
     <div id="webgl-output">
-      <script type="module" src="rocks-VR.js"></script>
+      <script type="module" src="rocks-VR.js"defer ></script>
     </div>
 
   </body>
