adjusted title of ar rocks page

--- a/projects/src/rocks-application-AR.html
+++ b/projects/src/rocks-application-AR.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title id="title1">Solar System - AR</title>
+    <title id="title1">Rocks - AR</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <script src="../../js/translation.js"></script>
@@ -80,8 +80,8 @@
     <script>
          TRANSLATION.add(
             '#title1',
-            'Solar System - AR',
-            'Sistema Solar - RA'
+            'Rocks - AR',
+            'Rochas - RA'
         );
     </script>
 </body>
