remoção de código desnecessário no projeto rocks

--- a/projects/src/rocks-application-VR.html
+++ b/projects/src/rocks-application-VR.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Basic Scene</title>
+    <title>Rocks - VR</title>
     <!-- <link rel="shortcut icon" href="../favicon.ico"> -->
     <!-- <link rel="stylesheet" href="../html/resources/default.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
