--- a/index.html
+++ b/index.html
@@ -154,41 +154,25 @@
         </div>
 
         <!-- External Apps Section -->
-        <div class="w3-container w3-padding-32" id="vr-apps">
-            <h3 id="external-apps-header" class="w3-border-bottom w3-border-light-grey w3-padding-16">External Apps</h3>
+        <div class="w3-container w3-padding-32">
+            <h3 id="tutorial-header" class="w3-border-bottom w3-border-light-grey w3-padding-16">Tutoriais</h3>
         </div>
 
         <div class="w3-row-padding">
-            <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="javascript: TRANSLATION.redirect('external-apps/gartsculture.html')">
+            <div class="w3-col  m3 s12 w3-margin-bottom">
+                <a href="javascript: TRANSLATION.redirect('tutorials/ar.html')">
                     <div class="w3-display-container">
-                        <div class="project-title w3-display-topleft w3-padding">Google Arts & Culture</div>
+                        <div class="project-title w3-display-topleft w3-padding">AR</div>
                         <img src="img/gartsculture/gartculture.jpg" alt="Google Arts and Culture logo"
                             style="width:100%">
                     </div>
                 </a>
             </div>
-            <div class="w3-col l3 m6 w3-margin-bottom">
+            <div class="w3-col m3 s12 w3-margin-bottom">
                 <a href="javascript: TRANSLATION.redirect('external-apps/gexpeditions.html')">
                     <div class="w3-display-container">
                         <div class="project-title w3-display-topleft w3-padding">Google Expeditions</div>
                         <img src="img/gexpeditions/gexpeditions.png" alt="Google Expeditions logo" style="width:100%">
-                    </div>
-                </a>
-            </div>
-            <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="javascript: TRANSLATION.redirect('external-apps/sitesinvr.html')">
-                    <div class="w3-display-container">
-                        <div id="sites" class="project-title w3-display-topleft w3-padding">Sites in VR</div>
-                        <img src="img/sitesinvr/sitesvr.jpg" alt="Sites in VR logo" style="width:100%">
-                    </div>
-                </a>
-            </div>
-            <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="javascript: TRANSLATION.redirect('external-apps/matterportvr.html')">
-                    <div class="w3-display-container">
-                        <div class="project-title w3-display-topleft w3-padding">Matterport VR</div>
-                        <img src="img/matterportvr/matterport.jpg" alt="Matterport VR logo" style="width:100%">
                     </div>
                 </a>
             </div>
@@ -302,8 +286,6 @@
 
         <!-- End page content -->
     </div>
-    </div>
-
 
     <!-- Footer -->
     <footer class="w3-center w3-black w3-padding-16">
@@ -330,9 +312,9 @@
         }
 
         TRANSLATION.add(
-            '#external-apps-header',
-            'External Apps',
-            'Aplicativos externos'
+            '#tutorial-header',
+            'Tutorials',
+            'Tutoriais'
         );
 
         TRANSLATION.add(
@@ -400,7 +382,7 @@
             'Mars',
             'Marte'
         )
-        
+
         TRANSLATION.add(
             '#rock',
             'Rock Types',
