added ar tutorial

--- a/index.html
+++ b/index.html
@@ -162,17 +162,9 @@
             <div class="w3-col  m3 s12 w3-margin-bottom">
                 <a href="javascript: TRANSLATION.redirect('tutorials/ar.html')">
                     <div class="w3-display-container">
-                        <div class="project-title w3-display-topleft w3-padding">AR</div>
-                        <img src="img/gartsculture/gartculture.jpg" alt="Google Arts and Culture logo"
+                        <div id="tuto-ar" class="project-title w3-display-topleft w3-padding">Augmented Reality</div>
+                        <img src="img/tuto-ar.png" alt="Google Arts and Culture logo"
                             style="width:100%">
-                    </div>
-                </a>
-            </div>
-            <div class="w3-col m3 s12 w3-margin-bottom">
-                <a href="javascript: TRANSLATION.redirect('external-apps/gexpeditions.html')">
-                    <div class="w3-display-container">
-                        <div class="project-title w3-display-topleft w3-padding">Google Expeditions</div>
-                        <img src="img/gexpeditions/gexpeditions.png" alt="Google Expeditions logo" style="width:100%">
                     </div>
                 </a>
             </div>
@@ -495,6 +487,11 @@
             'Nome'
         );
 
+        TRANSLATION.add(
+            '#tuto-ar',
+            'Augmented Reality',
+            'Realidade Aumentada'
+        )
     </script>
 
 </body>
