added vr tutorial

--- a/index.html
+++ b/index.html
@@ -163,8 +163,16 @@
                 <a href="javascript: TRANSLATION.redirect('tutorials/ar.html')">
                     <div class="w3-display-container">
                         <div id="tuto-ar" class="project-title w3-display-topleft w3-padding">Augmented Reality</div>
-                        <img src="img/tuto-ar.png" alt="Google Arts and Culture logo"
-                            style="width:100%">
+                        <img src="img/tuto-ar.png" alt="Augmented Reality tutorial" style="width:100%">
+                    </div>
+                </a>
+            </div>
+
+            <div class="w3-col  m3 s12 w3-margin-bottom">
+                <a href="javascript: TRANSLATION.redirect('tutorials/vr.html')">
+                    <div class="w3-display-container">
+                        <div id="tuto-vr" class="project-title w3-display-topleft w3-padding">Virtual Reality</div>
+                        <img src="img/tuto-vr.png" alt="Virtual Reality tutorial" style="width:100%">
                     </div>
                 </a>
             </div>
@@ -491,6 +499,12 @@
             '#tuto-ar',
             'Augmented Reality',
             'Realidade Aumentada'
+        )
+
+        TRANSLATION.add(
+            '#tuto-vr',
+            'Virtual Reality',
+            'Realidade Virtual'
         )
     </script>
 
